# pyCircuit

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.cursor/agents/: codereviewer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
agents/skill/pe_int/: SKILL.md
binding/python/pycircuit/: dsl.py  hw.py  jit.py
cmake/: install_runtime_deps.cmake.in  pycircuitConfig.cmake.in  toolchain-metadata.json.in
compiler/frontend/pycircuit/: __init__.py  api_contract.py  cli.py  component.py  design.py  dsl.py  hw.py  jit.py  jit_cache.py  literals.py  packaged_toolchain.py  path_shortening.py  probe.py  tb.py  testbench.py  trace_dsl.py  v5.py
compiler/mlir/: CMakeLists.txt  README.md
compiler/mlir/scripts/: build_all.sh
compiler/mlir/tools/: pyc-compile.cpp  pycc.cpp
davinci_build/verilog/: compile_stats.json  davinci_top.v  manifest.json  yosys_synth.ys
davinci_build/verilog_hier/: alu.v  bru.v  compile_stats.json  cube_rs.v  davinci_top.v  decoder.v  dispatch.v  fetch.v  lsu.v  lsu_rs.v  mte_rs.v  muldiv.v  rename.v  scalar_rs.v  vec_rs.v
designs/BypassUnit/: bypass_unit.py  bypass_unit_v5.py  tb_bypass_unit.py
designs/CSU/: csu.py  sim_csu_perfetto.py  test_csu_steps.py
designs/CSU/docs/: step1.md  step9.md
designs/IssueQueue/: issq.py  tb_issq.py
designs/PE_INT/: .gitignore  README.md  memory.md
designs/PE_INT/docs/: circuit_optimizer_report.md  design_spec.md  regression_report.md  spec.md
designs/PE_INT/filelist/: pe_int.f
designs/PE_INT/model/: README.md  depth_probe_units.py  estimate_logic_depth.py  gen_rtl_case_vectors.py  model.f  pe_int_pycircuit_eval.py  ref_model.py  test_pe_int.py
designs/PE_INT/python/: build.py  pe_int_pycircuit.py
designs/PE_INT/rtl/: README.md  pe_int_l3.v
designs/PE_INT/sim/: README.md  run_all_wsl.sh  run_sim.sh
designs/PE_INT/tb/: README.md  tb_pe_int_pycircuit.py  tb_pe_int_pycircuit_2a_wave.py
designs/PE_INT/tb_rtl/: README.md  tb.f
designs/RegisterFile/: emulate_regfile.py  regfile.profdata  regfile.profraw  regfile.py  regfile_capi.cpp  tb_regfile.py
designs/RegisterFile/pgo_profiles/: _pgo_train.py  default.profraw  merged.profdata
designs/RegisterFile/pgo_profiles2/: default.profraw  merged.profdata
designs/examples/: README.md  counter.py  counter_testgen.py  fifo_loopback.py  hier_modules.py  issue_queue_2picker.py  jit_control_flow.py  jit_pipeline_vec.py  multiclock_regs.py  template_interface_wiring_demo.py  update_generated.sh  wire_ops.py
designs/examples/cpp/: CMakeLists.txt  tb_fifo.cpp  tb_issue_queue_2picker.cpp
designs/janus/: README.md  update_generated.sh
designs/outerCube/: Davinci_BCC_ScalarPipeline_v1.md  Davinci_BlockROB_v1.md  Davinci_superscalar_v2.md  Davinci_vtg_vector_micro_instructions_v1.md  FMA指令场景说明.md  Simplified_Superscalar Design Concepts-2.md  nv_shuffle.py  outerCube.md  plot_tile16_vector_datapath.py  tregfile4k_v2.md  vector4k.md  vector4k_v2.md  vector512.md
doc/: pyCircuit_Tutorial.md
docs/: COMPILER_FLOW.md  DIAGNOSTICS.md  FRONTEND_API.md  IR_SPEC.md  LINXCORE_DSE_GUIDE.md  LINX_WORKSPACE.md  META_STRUCTURES.md  PIPELINE.md  PRIMITIVES.md  PyCircuit_V5_Spec.md  QUICKSTART.md  TEMPLATE_METAPROGRAMMING.md  TESTBENCH.md  USAGE.md  VERILOG_FLOW.md  WSL_UBUNTU_ON_WINDOWS.md  ZYBO_Z7_20_LINX_PLATFORM.md  cycle_balance_improvement.md  cycle_balance_improvement_detailed_plan.md  designs_upgrade_to_v5.md  index.md  pyCircuit_Tutorial.md  pycircuit_implementation_method.md  simulation.md
docs/api/: index.md
docs/development/: index.md
docs/gates/: README.md  decision_status_v40.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/tutorial/: cycle-aware-computing.md  index.md  unified-signal-model.md
examples/: README.md  issue_queue_2picker.py  jit_control_flow.py  update_generated.sh
examples/cpp/: CMakeLists.txt  tb_issue_queue_2picker.cpp
examples/digital_clock/: README.md  bcd.py  debounce.py  digital_clock.py  digital_clock_capi.cpp  emulate_digital_clock.py
examples/fastfwd_pyc/: fastfwd_pyc.py  tb_fastfwd_pyc.cpp
examples/issue_queue_2picker/: tb_issue_queue_2picker.sv
examples/linx_cpu_pyc/: linx_cpu_pyc.py  pipeline.py  tb_linx_cpu_pyc.cpp
flows/scripts/: install_llvm_and_build.sh  lib.sh  pyc  run_examples.sh  run_semantic_regressions_v40.sh  run_sims.sh  run_sims_nightly.sh
flows/tools/: build_cpp_manifest.py  check_decision_status.py  check_no_legacy_api.py  dump_pyctrace.py  fix_v3_imports.py  gen_cmake_from_manifest.py  pyc_flow.py  pyc_module_graph.py  rewrite_legacy_api.py  rewrite_literals_v3.py  run_fastfwd_pyc_cpp.sh  run_linx_cpu_pyc_cpp.sh  run_linx_cpu_pyc_verilator.sh  run_linx_qemu_vs_pyc.sh
include/cpp/: pyc_async_fifo.hpp  pyc_bits.hpp  pyc_byte_mem.hpp  pyc_cdc_sync.hpp  pyc_clock.hpp  pyc_connector.hpp  pyc_debug.hpp  pyc_konata.hpp  pyc_linxtrace.hpp  pyc_ops.hpp  pyc_primitives.hpp  pyc_print.hpp  pyc_probe_registry.hpp  pyc_runtime.hpp  pyc_sim.hpp  pyc_sync_mem.hpp  pyc_tb.hpp  pyc_trace_bin.hpp  pyc_vcd.hpp  pyc_vec.hpp
iplib/: cache.py  mem2port.py  picker.py  queue.py  regfile.py  sram.py  stream.py
packaging/wheel/: create_wheel.py  get_macos_wheel_plat_name.py  get_wheel_plat_name.py  platform_tags.py  setup.py
pyc/mlir/: CMakeLists.txt
python/pycircuit/: cli.py  hw.py
runtime/cpp/: CMakeLists.txt  pyc_bits.hpp  pyc_byte_mem.hpp  pyc_change_detect.hpp  pyc_linxtrace.hpp  pyc_primitives.hpp  pyc_probe_registry.hpp  pyc_runtime.cpp  pyc_runtime.hpp  pyc_sim.hpp  pyc_tb.hpp  pyc_trace_bin.hpp
runtime/verilog/: pyc_fifo.v  pyc_reg.v
scripts/: install_llvm_and_build.sh  pyc  run_cube_cpp.sh
tests/: test_drive_when.py  test_literal_dedup.py  test_reset_polarity.py
tests/system/: test_smoke_system.py
tests/unit/: test_cli_entrypoints.py  test_v5_reset_interface.py  test_v5_state_signal.py
tools/: dse_fastfwd_pyc.sh  run_fastfwd_pyc_cpp.sh  run_linx_cpu_pyc_cpp.sh  schematic_view.py
(+530 files in other folders)
